--- a/index.html
+++ b/index.html
@@ -4,27 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
-            <h1>Stay Focused on</h1>
-            <h1>Mission 2024</h1>
+    <section class="flexible">
+        <div class="half-width">
+            <div class="left-border">
+                <h1>Stay Focused on</h1>
+                <h1 class="orange-color">Mission 2024</h1>
+            </div>
             <p>This is my mission in 2024. There are plenty of important things that I want to finish within this year. I'm positive that I can finish those in the prescribed time.</p>
-            <a target="_blank" href="https://github.com/mahbubprogram/assignment1">Explore Now</a>
+            <a class="link-button" target="_blank" href="https://github.com/mahbubprogram/assignment1">Explore Now</a>
+            <br>
+            <br>
             <p>Scroll down to explore more about me.</p>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/person/person-0.png" alt="">
         </div>
     </section>
     <section>
-        <h1>My Mission in 2024</h1>
-        <div>
-            <div>
+        <h1 class="mission-header">My Mission in <span class="orange-color">2024</span></h1>
+        <div class="flexible">
+            <div class="one-third" id="mission">
                 <img src="images/illustrators/illustrator-1.png" alt="">
-                <h3>Mission</h3>
+                <h3><strong>Mission</strong></h3>
                 <ul>
                     <li>Learning HTML</li>
                     <li>Learning CSS</li>
@@ -32,39 +39,39 @@
                     <li>Learning React</li>
                 </ul>
             </div>
-            <div>
+            <div class="one-third" id="vission">
                 <img src="images/illustrators/illustrator-2.png" alt="">
-                <h3>Vission</h3>
+                <h3><strong>Vission</strong></h3>
                 <ul>
                     <li>Becoming a web developer</li>
                     <li>Becoming a front end developer</li>
                     <li>Earn through freelancing</li>
                 </ul>
             </div>
-            <div>
+            <div class="one-third" id="goals">
                 <img src="images/illustrators/illustrator-1.png" alt="">
-                <h3>Goals</h3>
+                <h3><strong>Goals</strong></h3>
                 <p>I want to be a professional in web development sector because I have interest in it. I want to earn  so much for myself and also for my family.</p>
             </div>
         </div>
     </section>
-    <section>
-        <div>
+    <section class="flexible develop-background">
+        <div class="half-width">
             <img src="images/pictures/coding.png" alt="">
         </div>
-        <div>
+        <div class="half-width">
             <h2>Develop Without Limits</h2>
             <p>I believe that if i remain determind and work continuously toward my goal, I will be successful. My determination will be the key. As I've already taken the first step, I don't want to stop anymore.</p>
-            <a href="https://github.com/mahbubprogram/assignment1">Read The Documentation</a>
+            <a class="link-button" href="https://github.com/mahbubprogram/assignment1">Read The Documentation</a>
         </div>
     </section>
-    <section>
-        <div>
+    <section class="flexible projects-background">
+        <div class="half-width">
             <h2>Check Out My Projects</h2>
             <p>There are quite a few advance level projects that I have already worked on. Feel free to have a look into those. I will appreciate if you let me know your opinion about them.</p>
-            <a href="https://github.com/mahbubprogram/assignment1">The Projects</a>
+            <a class="link-button" href="https://github.com/mahbubprogram/assignment1">The Projects</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
