--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>assignment1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +30,7 @@
         </div>
     </section>
     <section>
-        <h1 class="mission-header">My Mission in <span class="orange-color">2024</span></h1>
+        <h1 class="header-align">My Mission in <span class="orange-color">2024</span></h1>
         <div class="flexible">
             <div class="one-third" id="mission">
                 <img src="images/illustrators/illustrator-1.png" alt="">
@@ -62,40 +65,44 @@
         <div class="half-width">
             <h2>Develop Without Limits</h2>
             <p>I believe that if i remain determind and work continuously toward my goal, I will be successful. My determination will be the key. As I've already taken the first step, I don't want to stop anymore.</p>
-            <a class="link-button" href="https://github.com/mahbubprogram/assignment1">Read The Documentation</a>
+            <a class="link-button" target="_blank" href="https://github.com/mahbubprogram/assignment1">Read The Documentation</a>
         </div>
     </section>
     <section class="flexible projects-background">
         <div class="half-width">
             <h2>Check Out My Projects</h2>
             <p>There are quite a few advance level projects that I have already worked on. Feel free to have a look into those. I will appreciate if you let me know your opinion about them.</p>
-            <a class="link-button" href="https://github.com/mahbubprogram/assignment1">The Projects</a>
+            <a class="link-button" target="_blank" href="https://github.com/mahbubprogram/assignment1">The Projects</a>
         </div>
         <div class="half-width">
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
     <section>
-        <h1>Contact Me</h1>
+        <h1 class="header-align"><span class="orange-color">Contact</span> Me</h1>
         <form action="">
-            <div>
-                <p>Your Name:</p>
-                <input type="text"><br>
-                <p>Your Email:</p>
-                <input type="email"><br>
-                <p>Mobile No:</p>
-                <input type="number">
+            <div class="flexible">
+                <div class="half-width">
+                    <p>Your Name:</p>
+                    <input type="text"><br>
+                    <p>Your Email:</p>
+                    <input type="email"><br>
+                    <p>Mobile No:</p>
+                    <input type="number">
+                </div>
+                <div class="half-width">
+                    <p>Your Comment:</p>
+                    <input class="comment" type="text">
+                </div>
             </div>
-            <div>
-                <p>Your Comment:</p>
-                <input type="text">
+            <div class="submit-cancel">
+                <a class="link-button" target="_blank" href="https://github.com/mahbubprogram/assignment1">Submit</a>
+                <a class="link-button" target="_blank" href="https://github.com/mahbubprogram/assignment1">Cancel</a>
             </div>
-            <a href="https://github.com/mahbubprogram/assignment1">Submit</a>
-            <a href="https://github.com/mahbubprogram/assignment1">Cancel</a>
         </form>
     </section>
     <footer>
-        <h2>Mission 2024</h2>
+        <h2>Mission <span class="orange-color">2024</span></h2>
         <p>Hard work, preserverence and determination for 2024</p>
     </footer>
 </body>
